K8s/Traefik/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    http:
      paths:
        - path: /Cars
          pathType: Prefix
          backend:
            service:
              name: cars-clusterip-srv
              port:
                number: 80
        - path: /Users
          pathType: Prefix
          backend:
            service:
              name: users-clusterip-srv
              port:
                number: 80
        - path: /Auth
          pathType: Prefix
          backend:
            service:
              name: users-clusterip-srv
              port:
                number: 80
        - path: /IndoorEnvironments
          pathType: Prefix
          backend:
            service:
              name: environments-clusterip-srv
              port:
                number: 80
        - path: /Stats
          pathType: Prefix
          backend:
            service:
              name: environments-clusterip-srv
              port:
                number: 80
        - path: /Garages
          pathType: Prefix
          backend:
            service:
              name: garages-clusterip-srv
              port:
                number: 80
